# Intrusion_detection_and_alarm_system

./: .gitignore  CMakeLists.txt  README.md
3rd/Eigen3/share/eigen3/cmake/: Eigen3ConfigVersion.cmake
3rd/jsoncpp/lib/cmake/jsoncpp/: jsoncpp-targets-debug.cmake
3rd/jsoncpp/lib/pkgconfig/: jsoncpp.pc
3rd/opencv/x64/vc16/lib/: OpenCVModules-debug.cmake  opencv_calib3d490d.lib  opencv_core490d.lib  opencv_dnn490d.lib  opencv_features2d490d.lib  opencv_flann490d.lib  opencv_gapi490d.lib  opencv_highgui490d.lib  opencv_imgcodecs490d.lib  opencv_imgproc490d.lib  opencv_ml490d.lib  opencv_objdetect490d.lib  opencv_photo490d.lib  opencv_stitching490d.lib  opencv_video490d.lib  opencv_videoio490d.lib
bytetrack/include/: BYTETracker.h  BytekalmanFilter.h
bytetrack/src/: BYTETracker.cpp
include/: app.h  app_server.h  app_task_base.h  det_task.h  http_server.h  mylogger.h  myutils.h  onnx_task.hpp  output_task.h  push_task.h  rtsp_task.h  thread_safe_queue.h  track_task.h  yolov8_onnx.hpp
src/: app_server.cpp  app_task_base.cpp  det_task.cpp  http_server.cpp  main.cpp  output_task.cpp  rtsp_task.cpp  test_http_client.cpp  track_task.cpp
